--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mysql2": "^3.14.3"
   }
 }
